2005-07-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/NavWebPage.py: Avoid some segfaults; HTML validation fixes;
	Show all names of a person; Show all images of person/source and
	place; Add plugin version to header; Optimize page titles
	* src/Utils.py (find_mime_type_pixbuf): Dont segfault with note only object
	* src/SelectObject.py (on_select_row): Dont segfault with note only object
	* src/GenericFilter.py: Only load rules that provide the required
	number of arguments.

2005-07-14  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: gallery/media object enhancements, div/span fixes
	in HTML, source and place references, individual source pges.

2005-07-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/NavWebPage.py: Added display_note_object and
	display_first_image_as_thumbnail to BasePage; PlacePage and
	IndividualPage use this now.
	Display URL list of Individuals and Places

2005-07-14  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: wrap content with div, fix encoding problems

2005-07-13  Don Allingham  <don@gramps-project.org>
	* src/Sort.py: don't use upper case, let locale.strcoll figure this
	out (correctly) for us
	* src/plugins/NavWebPage.py: fix sorting.
	* src/data/main*.css: added stylesheets for web page generator
	* src/data/Makefile.am: add stylesheets
	
2005-07-13  Alex Roitman  <shura@gramps-project.org>
	* src/GenericFilter.py: Proper test for place in event-based
	filters; (Rule.set_list): Add assertion to have the correct number
	of arguments; (various): stop testing for number of arguments.
	* src/AddSpouse.py (LikelyFilter): Add labels to the filter.
	* src/ChooseParents.py (LikelyFilter): Add labels to the filter.
	* src/SelectiChild.py (LikelyFilter): Add labesl to the filter.
	* src/gramps_main.py (init_filters): Instantiate filters with
	corrent number of arguments.	

2005-07-13  Don Allingham  <don@gramps-project.org>
	* src/GrampsInMemDB.py: add get_event_cursor